# superbookmanagesysterm

./: .gitignore  Book.cpp  CMakeLists.txt  FileUser.cpp  README.md  User.cpp  bookinfo.txt  head.h  index.txt  main.cpp  makefile  userinfo.txt
data/: bookinfo.txt  fine.txt  index.txt  userinfo.txt
include/: Book.h  Index.h  User.h  function.h  head.h
src/: Book.cpp  Index.cpp  User.cpp  function.cpp  main.cpp
thirdlib/SDL2-2.30.3/: ._README.txt  ._x86_64-w64-mingw32
thirdlib/SDL2-2.30.3/i686-w64-mingw32/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
thirdlib/SDL2-2.30.3/i686-w64-mingw32/lib/pkgconfig/: sdl2.pc
thirdlib/SDL2-2.30.3/x86_64-w64-mingw32/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
thirdlib/SDL2-2.30.3/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config-version.cmake
thirdlib/SDL2-2.30.3/x86_64-w64-mingw32/lib/pkgconfig/: sdl2.pc
